// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontTileSummary renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`FrontTileSummary renders with keyline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
      showKeyline={true}
    />
  </View>
</View>
`;

exports[`FrontTileSummary renders with more than 1 columns 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  />
</View>
`;

exports[`FrontTileSummary renders without byline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  />
</View>
`;

exports[`FrontTileSummary renders without strapline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="straplineWrapper"
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`FrontTileSummary shows front tile summary with content once headline/strapline/byline are measured 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 10,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 20,
        "opacity": 1,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 15,
        "opacity": 1,
      }
    }
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <FrontArticleSummaryContent
    bylines={
      Array [
        Object {
          "byline": Array [
            Object {
              "foo": "bar",
            },
          ],
        },
      ]
    }
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
    template="mainstandard"
  />
</View>
`;

exports[`FrontTileSummary shows front tile summary without content once headline/strapline/byline are measured 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 10,
      }
    }
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 1,
      }
    }
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "marginBottom": 0,
        "opacity": 0,
      }
    }
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;
